--- a/css/style.styl
+++ b/css/style.styl
@@ -74,13 +74,14 @@ main.item
 	&.active
 		left 0
 		overflow-y: auto;
-.matriz
+.matriz,.resultado
 	position: relative
 	padding 10px
 	display inline-block
 	input
 		height: 2rem;
 		text-align center
+.matriz
 	&:before, &:after
 		top: 0px;
 		content: '';
