--- a/template/multiplicacion.html
+++ b/template/multiplicacion.html
@@ -1,7 +1,7 @@
 <div class="col l12" ng-controller="MultiplicacionCtrl">
   <div class="row">
     <div class="col l8">
-      <p class="">Ingrese los datos las matrices para multiplicar</p>
+      <p class="">Ingrese los datos de las matrices para multiplicar</p>
       <p class="">Los espacios vacios se consideraran como ceros</p>
     </div>
 		<div class="col l4">
