--- a/template/suma.html
+++ b/template/suma.html
@@ -1,3 +1,32 @@
-<div class="col l12">
-  suma
+<div class="col l12" ng-controller="SumaCtrl">
+  <div class="row">
+    <div class="col l8">
+      <p class="">Ingrese los datos de las matrices para sumar</p>
+      <p class="">Los espacios vacios se consideraran como ceros</p>
+    </div>
+		<div class="col l4">
+      <button ng-disabled="!agregar" ng-click="cambiarFilas(1)" class="waves-effect waves-light btn right"><i class="material-icons">add</i></button>
+			<button ng-disabled="!quitar" ng-click="cambiarFilas(-1)" class="waves-effect waves-light btn right"><i class="material-icons">remove</i></button>
+		</div>
+	</div>
+  <div class="row">
+    <div class="matriz offset-l col l5 ">
+        <div  class="col l{{12/matriz.n}}" ng-repeat="i in getNumber(matriz.n * matriz.n,'primera') track by $index">
+  			  <input type="number" ng-model="getNumber(matriz.n * matriz.n,'primera')[$index]">
+  		  </div>
+    </div>
+    <div class="matriz offset-l col l5 right">
+      <div  class="col l{{12/matriz.n}}" ng-repeat="i in getNumber(matriz.n * matriz.n,'segunda') track by $index">
+        <input type="number" ng-model="getNumber(matriz.n * matriz.n,'segunda')[$index]">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <h5>Resultado</h5>
+    <div class="matriz offset-l3 col l5">
+      <div  class="col l{{12/matriz.n}}" ng-repeat="i in getNumber(matriz.n * matriz.n,'resultado') track by $index">
+        <input type="number" ng-model="getNumber(matriz.n * matriz.n,'resultado')[$index]">
+      </div>
+    </div>
+  </div>
 </div>
